# kafkalite

./: Cargo.toml  README.md
src/: broker.rs  config.rs  lib.rs  main.rs  protocol.rs  router.rs  server.rs  shutdown.rs  startup.rs  topic.rs
src/handler/: add_topic.rs  delete_topic.rs  list_topics.rs  mod.rs  ping.rs  publish.rs  subscribe.rs  unsubscribe.rs
src/protocol/: codec.rs  mod.rs  request.rs  response.rs
tests/: add_topic.rs  broker_server.rs  delete_topic.rs  list_topics.rs  publish.rs  subscribe.rs  unsubscribe.rs
tests/helpers/: mod.rs  test_broker.rs  test_client.rs
