[package]
name = "kafkalite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["net", "time", "rt-multi-thread", "macros", "signal", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = { version = "0.3" }
bytes = "1.10"
uuid = { version = "1.18", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }